# Projekt-Polaris

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/common/: LinearAlgebra.h  Types.h
common/src/: LinearAlgebra.cpp  Test.cpp
simulator/: CMakeLists.txt
simulator/src/: main.cpp
simulator/src/Models/: PhysicsEngine.cpp  PhysicsEngine.h  Rocket.cpp  Rocket.h  Simulation.h
simulator/src/Models/Rocket/: Rocket.cpp  Rocket.h
simulator/src/Models/World/: Atmosphere.cpp  Atmosphere.h  World.h
simulator/src/Noise/: NoiseModel.cpp  NoiseModel.h
